major overhaul to event order. much improved UX. lots of ui bugs preemtively squashed.

--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,12 @@
     padding:5px;
     margin:0 -10px;
     background:rgba(255,255,255,0.8);
+    background:rgba(0,0,0,1); color:white;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    }
+    
     }
 .details p {
     line-height:1.2em !important;
